<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.frbentes.omdbchallenge.view.activity.MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="@dimen/movie_detail_poster_width"
            android:layout_height="@dimen/movie_detail_poster_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_detail_poster"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_title"
                style="@style/MovieDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_label_title"
                android:ellipsize="end"
                android:maxLines="4" />

            <android.support.v7.widget.GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gl_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/grid_padding_left"
                app:useDefaultMargins="true"
                app:columnCount="2">

                <TextView
                    style="@style/GridLeftColumn"
                    app:layout_column="0"
                    app:layout_row="0"
                    android:text="@string/movie_detail_label_year" />

                <TextView
                    style="@style/GridRightColumn"
                    android:id="@+id/tv_detail_year"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    style="@style/GridLeftColumn"
                    app:layout_column="0"
                    app:layout_row="1"
                    android:text="@string/movie_detail_label_genre" />

                <TextView
                    style="@style/GridRightColumn"
                    android:id="@+id/tv_detail_genre"
                    app:layout_column="1"
                    app:layout_row="1" />

                <TextView
                    style="@style/GridLeftColumn"
                    app:layout_column="0"
                    app:layout_row="2"
                    android:text="@string/movie_detail_label_duration" />

                <TextView
                    style="@style/GridRightColumn"
                    android:id="@+id/tv_detail_duration"
                    app:layout_column="1"
                    app:layout_row="2" />

                <TextView
                    style="@style/GridLeftColumn"
                    app:layout_column="0"
                    app:layout_row="3"
                    android:text="@string/movie_detail_label_awards" />

                <TextView
                    style="@style/GridRightColumn"
                    android:id="@+id/tv_detail_awards"
                    app:layout_column="1"
                    app:layout_row="3" />
            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/movie_detail_text_margin_top"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/tv_detail_director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/movie_detail_text_margin_top"
        android:text="@string/movie_detail_label_director"
        android:textColor="@color/column_text_color"
        android:textSize="@dimen/description_text_size"
        android:ellipsize="end"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tv_detail_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/movie_detail_text_margin_top"
        android:text="@string/movie_detail_label_actors"
        android:textColor="@color/column_text_color"
        android:textSize="@dimen/description_text_size"
        android:ellipsize="end"
        android:maxLines="2" />

    <TextView
        android:id="@+id/tv_detail_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/movie_detail_text_margin_top"
        android:text="@string/movie_detail_label_plot"
        android:textColor="@color/column_text_color"
        android:textSize="@dimen/description_text_size"
        android:ellipsize="end"
        android:maxLines="15" />
</LinearLayout>
