<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin"
    android:layout_marginBottom="@dimen/card_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:elevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:transitionName="poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/CardTextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_item_name"
            android:maxLines="4" />

        <TextView
            android:id="@+id/tv_director"
            style="@style/CardTextSubItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/card_padding_medium"
            android:text="@string/movie_item_director"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tv_year"
            style="@style/CardTextSubItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/card_padding_large"
            android:text="@string/movie_item_year"
            android:maxLines="1" />

        <RelativeLayout
            android:id="@+id/rl_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_add_height"
            android:clickable="true"
            android:background="@color/accent">

            <TextView
                android:id="@+id/tv_add"
                style="@style/AddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/tag_add"
                android:drawablePadding="@dimen/tag_add_padding"
                android:text="@string/item_add" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
